# prism

./: .dockerignore  .gitignore  .lychee.toml  ADMIN_API_ARCHITECTURE_REVIEW.md  ADMIN_API_IMPLEMENTATION_PLAN.md  ADMIN_AUTH_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MAKEFILE_UPDATE_SUMMARY.md  Makefile.toml  PROMETHEUS_SCRAPING_ANALYSIS.md  PROMETHEUS_STATUS_SUMMARY.md  README.md  admin-api-specs.md  apply_validation.sh  clippy.toml  codecov.yml  core-cache-fixes.patch  nextest.toml  rust-toolchain.toml  rustc-ice-2025-12-06T19_23_43-3324056.txt  rustc-ice-2025-12-06T19_24_01-3324736.txt  rustfmt.toml  verify_prometheus_scraping.py  verify_prometheus_scraping.sh
.github/: RELEASE_PROCESS.md
.github/workflows/: codeql.yml  coverage.yml  lint.yml  release.yml  test.yml
config/: config.toml  development.admin.toml  development.toml  docker.toml  example.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: auth.rs  config.rs  fetch_endpoints.rs  mod.rs  utils.rs
crates/prism-core/: Cargo.toml
crates/prism-core/benches/: cache_benchmarks.rs  cache_manager_benchmarks.rs  consensus_engine_benchmarks.rs  hex_benchmarks.rs  json_hash_benchmarks.rs  log_cache_benchmarks.rs
crates/prism-core/proptest-regressions/utils/: json_hash.txt
crates/prism-core/src/: lib.rs  types.rs
crates/prism-core/src/alerts/: evaluator.rs  manager.rs  mod.rs  types.rs
crates/prism-core/src/auth/: api_key.rs  mod.rs  repository.rs
crates/prism-core/src/cache/: block_cache.rs  cache_manager.rs  converter.rs  mod.rs  reorg_manager.rs  transaction_cache.rs  types.rs  validation.rs
crates/prism-core/src/cache/log_cache/: bitmap_indexes.rs  config.rs  coverage.rs  invalidation.rs  mod.rs  query_engine.rs
crates/prism-core/src/cache/manager/: background.rs  config.rs  fetch_guard.rs  mod.rs  utilities.rs  validation.rs
crates/prism-core/src/cache/manager/tests/: block_ops_tests.rs  cleanup_tests.rs  config_tests.rs  fetch_guard_tests.rs  fetch_lock_tests.rs  log_ops_tests.rs  mod.rs  range_tests.rs  stats_tests.rs  transaction_tests.rs  validation_tests.rs
crates/prism-core/src/cache/tests/: mod.rs  performance_tests.rs  stress_tests.rs
crates/prism-core/src/chain/: mod.rs  state.rs
crates/prism-core/src/config/: mod.rs
crates/prism-core/src/metrics/: mod.rs
crates/prism-core/src/middleware/: auth.rs  mod.rs  rate_limiting.rs  validation.rs
crates/prism-core/src/proxy/: engine.rs  errors.rs  mod.rs  partial.rs  utils.rs
crates/prism-core/src/proxy/handlers/: blocks.rs  logs.rs  mod.rs  transactions.rs
crates/prism-core/src/runtime/: builder.rs  components.rs  examples.rs  lifecycle.rs  mod.rs
crates/prism-core/src/upstream/: builder.rs  circuit_breaker.rs  dynamic_registry.rs  endpoint.rs  errors.rs  health.rs  hedging.rs  http_client.rs  latency_tracker.rs  load_balancer.rs  manager.rs  misbehavior.rs  mod.rs  runtime_registry.rs  scoring.rs  websocket.rs
crates/prism-core/src/upstream/consensus/: config.rs  engine.rs  mod.rs  quorum.rs  types.rs  validation.rs
crates/prism-core/src/upstream/consensus/tests/: engine_tests.rs  mod.rs
crates/prism-core/src/upstream/router/: mod.rs  smart.rs
crates/prism-core/src/utils/: block_param.rs  hex_buffer.rs  json_hash.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  router.rs
crates/server/src/admin/: audit.rs  middleware.rs  mod.rs  prometheus.rs  rate_limit.rs  types.rs
crates/server/src/admin/handlers/: alerts.rs  apikeys.rs  cache.rs  config.rs  logs.rs  metrics.rs  mod.rs  system.rs  upstream_validation.rs  upstreams.rs
crates/server/src/admin/logging/: buffer.rs  layer.rs  mod.rs
crates/server/src/middleware/: auth.rs  correlation_id.rs  mod.rs  rate_limiting.rs  validation.rs
crates/tests/: Cargo.toml
crates/tests/src/: adversarial_tests.rs  cache_cleanup_tests.rs  consensus_tests.rs  failsafe_integration_tests.rs  hedging_tests.rs  lib.rs  logs_handler_tests.rs  middleware_chain_tests.rs  misbehavior_tests.rs  proxy_engine_tests.rs  runtime_tests.rs  scoring_tests.rs  websocket_tests.rs
crates/tests/src/e2e/: basic_rpc_tests.rs  batch_tests.rs  cache_tests.rs  client.rs  config.rs  failover_tests.rs  fixtures.rs  load_balancing_tests.rs  metrics_tests.rs  mod.rs  reorg_tests.rs
crates/tests/src/mock_infrastructure/: mod.rs  rpc_mock.rs  test_helpers.rs  websocket_mock.rs
db/: init.sql
deploy/prometheus/: prometheus.yml
docker/: docker-compose.prod.yml  docker-compose.yml
docker/devnet/: README.md  TestToken.sol  config.test.toml  devnet.sh  docker-compose.yml  foundry.toml  genesis.json  init-geth.sh  tx-spammer.sh  verify.sh
docs/: README.md  architecture.md  caching-system.md  deployment.md  versioning-guide.md
docs/admin-api/: configuration.md  security.md
docs/internal/: ADMIN_API_ANALYSIS_INDEX.md  ADMIN_API_ARCHITECTURE_DIAGRAM.md  ADMIN_API_ARCHITECTURE_REVIEW.md  ADMIN_API_COMPLETENESS_REVIEW.md  ADMIN_API_HIGH_PRIORITY_ISSUES.md  ADMIN_API_IMPLEMENTATION_SUMMARY.md  ADMIN_API_PERFORMANCE_ANALYSIS.md  ADMIN_AUTH_IMPLEMENTATION.md  ALERT_BOUNDS_SUMMARY.md  ARCHITECTURE_REVIEW_ADMIN_API.md  CACHE_MEMORY_ESTIMATION_PATCH.md  CONFIG_EXPORT_ARCHITECTURE.md  CONFIG_EXPORT_DESIGN.md  CONFIG_EXPORT_HANDLER_IMPLEMENTATION.md  CONFIG_EXPORT_IMPLEMENTATION_ROADMAP.md  CONFIG_EXPORT_SUMMARY.md  COPY_PASTE_IMPLEMENTATION.md  HOT_WINDOW_PERFORMANCE_ANALYSIS.md  HOT_WINDOW_ZERO_INVESTIGATION.md  INPUT_VALIDATION_SUMMARY.md  LOGGING_ARCHITECTURE_REVIEW.md  MANUAL_VALIDATION_PATCH.md  METRICS_DATA_SOURCE_IMPLEMENTATION.md  PERFORMANCE_SUMMARY.md  PROMETHEUS_ARCHITECTURE.md  QUICK_COPY_PASTE_GUIDE.md  RUNTIME_UPSTREAMS_NAMING_ANALYSIS.md  RUST_IMPLEMENTATION_GUIDE.md  TRANSACTION_CACHE_ARCHITECTURE_ANALYSIS.md  TRANSACTION_CACHE_DEBUG_PATCH.md  TRANSACTION_CACHE_DEBUG_SUMMARY.md  TRANSACTION_CACHE_DIAGNOSIS.md  TRANSACTION_CACHE_PERFORMANCE_ANALYSIS.md  TRANSACTION_CACHE_ZERO_ENTRIES_INVESTIGATION.md  (+6 more)
examples/: server_with_runtime.rs
k6/: README.md
scripts/: run-e2e-suite.sh
(+51 files in other folders)
