[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
rust-version = "1.93.0"
authors = ["Redisun <anon@anon.anon>"]
description = "Prism - A high-performance blockchain RPC proxy with caching and load balancing"
license = "MIT OR Apache-2.0"
homepage = "https://prismrpc.dev"
repository = "https://github.com/prismrpc/prism"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
    "crates/prism-core",
    "crates/server",
    "crates/cli",
    "crates/tests",
]

[workspace.dependencies]
arc-swap = "1.7"
axum = "0.8.4"
axum-server = "0.7.2"
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit", "compression-gzip", "compression-br", "compression-zstd"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
moka = { version = "0.12", features = ["future"]}
thiserror = "2.0.16"
anyhow = "1.0.0"
config = "0.15.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
roaring = "0.11.2"
dashmap = "6.1.0"
lru = "0.16.0"
hex = "0.4"
md5 = "0.8.0"
futures = "0.3.31"
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots", "rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3.31"
bytes = "1.10.1"
winnow = "0.7.12"
rayon = "1.8"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
sha2 = "0.10.9"
argon2 = "0.5"
ring = "0.17.8"
ahash = "0.8.12"
url = "2.5.6"
toml = "0.9.5"
smallvec = "1.13.2"
tempfile = "3.21.0"
mockito = "1.0"
tokio-test = "0.4"
insta = "1.0"
criterion = "0.7.0"
proptest = "1.0"
serial_test = "3.2"
cargo-nextest = "0.9.102"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
