[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Prism CLI"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
prism-core = { path = "../prism-core" }
clap = { version = "4.5.45", features = ["derive"] }
prettytable = "0.10.0"
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
