[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Prism Server"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
prism-core = { path = "../prism-core" }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
